mysql-deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql-deployment
  labels: 
    app: mysql
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector: 
    matchLabels: 
      app: mysql
  template:
    metadata:
      name: mysql-db
      labels:
        app: mysql
    spec:
      containers:
       - name: mysql-pod
         image: mysql
         ports:
          - containerPort: 3306
         volumeMounts:
          - mountPath: /var/lib/mysql
            name: db-data        
      volumes:
        - name: db-data
          persistentVolumeClaim: 
            claimName: mysql-pvc
