services.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  type: NodePort
  ports:
   - protocol: TCP
     targetPort: 80
     port: 80
     nodePort: 30008
  selector:
    app: wordpress
