onefile.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: wordpress-deployment
  labels: 
    app: wordpress
spec:
  replicas: 2
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  selector: 
    matchLabels: 
      app: wordpress
  template:
    metadata:
      name: wordpress
      labels:
        app: wordpress
    spec:
      containers:
       - name: wordpress-pod
         image: wordpress
         ports:
          - containerPort: 80
         volumeMounts:
          - mountPath: /var/www/html
            name: data-volume
  #creation du volume        
      volumes:
        - name: data-volume
          persistentVolumeClaim: 
            claimName: wp-pvc

---
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: mysql-deployment
  labels: 
    app: mysql
spec:
  replicas: 1
  strategy: 
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector: 
    matchLabels: 
      app: mysql
  template:
    metadata:
      name: mysql-db
      labels:
        app: mysql
    spec:
      containers:
       - name: mysql-pod
         image: mysql
         ports:
          - containerPort: 3306
         volumeMounts:
          - mountPath: /var/lib/mysql
            name: db-data        
      volumes:
        - name: db-data
          persistentVolumeClaim: 
            claimName: mysql-pvc

---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
  labels:
    app: mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-svc
spec:
  type: NodePort
  ports:
   - protocol: TCP
     targetPort: 80
     port: 80
     nodePort: 30008
  selector:
    app: wordpress

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: ec2-3-89-92-123.compute-1.amazonaws.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-svc
                port:
                  number: 80
